# C1CW

./: .gitignore  .gitlab-ci.yml  README.md  benchmark_results.csv  build_docs.sh  docker-compose.yml  saved_model.keras  scaler_params.json  start_app.sh  test_output.txt  test_output_debug.txt
backend/: .dockerignore  Dockerfile  app.py  inspect_pkl.py  main.py  pyproject.toml  requirements.txt  saved_model.keras  scaler_params.json  test_fivedreg_data.py  verify_model.py
backend/data/: dummy_dataset.pkl
backend/fivedreg/: __init__.py  data.py  model.py
backend/tests/: test_api_integration.py  test_system_ops.py  test_upload.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  performance.rst  testing.rst  usage.rst
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/predict/: page.tsx
frontend/src/app/train/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: Navbar.tsx  StatusBanner.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/context/: AppContext.tsx
scripts/: benchmark.py  benchmark_results.csv  build_docs.sh  start_app.sh  test_app.sh
